--- a/src/components/Comments/comments.css
+++ b/src/components/Comments/comments.css
@@ -98,12 +98,12 @@
     border-radius: 5px;
 }
 .TextareaSendComment{
+    outline: none;
     width: 100%;
-    height: 100px;
     font-size: 1.2rem;
     border-radius: 4px;
     border: none;
-    padding: 10px;
+    padding: 15px  !important;
     margin-bottom: 10px;
     resize: none;
 }
