--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,4 +1,5 @@
 .MainNav {
+    z-index: 1;
     padding: 3px 10px;
     display: flex;
     background-color: #13020d;
@@ -84,6 +85,7 @@ a .name {
     color: #77231d;
 }
 .NavDropDown{
+    z-index: 3;
     position: absolute;
     top: calc(100% + 5px);
     right: 150px;
@@ -123,6 +125,7 @@ a .name {
     border-bottom: 10px solid #13020d;
 }
 .NavReqAvatar{
+    margin-right: 4px;
     object-fit: cover;
     border-radius: 50%;
     height: 44px;
@@ -183,4 +186,8 @@ a .name {
     bottom: 14px;
     font-size: 25px;
     text-shadow: #000000 0px 0px 10px, #ff1201 0px 0px 20px, #ff1818 0px 0px 10px
+}
+.NavDivAvatar{
+    min-width: 282px;
+    margin-right: 20px;
 }
