--- a/src/components/Skick/slick.css
+++ b/src/components/Skick/slick.css
@@ -1,6 +1,7 @@
 .CarouselName{
   display: flex;
   align-items: center;
+  justify-content: center;
   min-height: 60px;
   font-size: 16px;
   margin-top: 2px;
@@ -21,9 +22,10 @@
   height: 184px;
   border-radius: 8px;
   object-fit: cover;
+  border: 0.5px solid #13020d;
 }
 .favoriteAnime-contaiter{
   align-items: center;
-  /* justify-content: center; */
+  justify-content: center;
   display: flex;
 }
