--- a/src/components/Skick/slick.css
+++ b/src/components/Skick/slick.css
@@ -10,7 +10,8 @@
   text-shadow:  #FFF 0px 0px 5px, #FF2D95 0px 0px 10px, #FF2D95 0px 0px 10px, #FF2D95 0px 0px 20px, #FF2D95 0px 5px 5px;
 }
 .slider-container{
-  width: 500px;
+  max-width: 500px;
+  width: max-content;
 }
 .Plate{
   display: flex !important;
@@ -29,3 +30,38 @@
   justify-content: center;
   display: flex;
 }
+.slick-loader{
+  /* width: 100%; */
+  /* height: 100%; */
+  /* display: flex; */
+}
+
+.lds-dual-ring,
+.lds-dual-ring:after {
+  box-sizing: border-box;
+}
+.lds-dual-ring {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+}
+.lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6.4px solid currentColor;
+  border-color: currentColor transparent currentColor transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
