--- a/src/pages/anime/anime-page.css
+++ b/src/pages/anime/anime-page.css
@@ -7,19 +7,20 @@
   width: 80%;
   max-height: max-content;
   min-height: 100vh;
-}
-  
+} 
 .container-dark {
   position: relative;
   margin: auto;
-  padding: 2rem;
-  padding-top: 5rem;
+  padding: 0px 2rem 0px 2rem;
   text-align: center;
   background-color: #3a1e3154;
   width: 80%;
-  max-height: max-content;
-  min-height: 100vh;
+  min-height: 89vh;
   box-shadow: 4px 4px 36px 5px rgba(195, 0, 255, 0.2);
+}
+.container-padding-top{
+  padding-top: 5rem;
+  min-height: 100vh;
 }
 .main{
   display: flex;
@@ -65,11 +66,15 @@
   flex: 1;
 }
 .AnimeScreenShoot{
+  cursor: pointer;
   width: 400px;
   padding-top: 30px;
-  margin: 15px;
   margin-bottom: 2rem;
   transition: transform 0.5s;
+}
+.AnimePageScreenShoots{
+  display: flex;
+  justify-content: space-between;
 }
 .AnimeScreenShoot:hover{
   transform: scale(1.1);
