--- a/src/pages/profilePages/Favorite.css
+++ b/src/pages/profilePages/Favorite.css
@@ -1,7 +1,8 @@
 .FavouritesDiv{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    gap:20px
+    gap:20px;
+    padding-bottom: 4rem;
 }
 .FavouriteDiv{
     position: relative;
@@ -25,9 +26,10 @@
     font-size: 42px;
     color: aliceblue;
     border-bottom: 1px solid #13020d;;
-    padding-bottom: 16px;
+    padding-bottom: 26px;
 }
-.Fdiv span {
+.Fdiv p{
+    max-width: 290px;
     transition: 0.5s;
     border: 1px solid #13020d;
     padding: 4px 8px 4px 8px;
@@ -47,7 +49,7 @@
     transform: translateY(-10px);
     visibility: hidden;
     transition: 0.3s;
-    width: 211px;
+    width: 290px;
 }
 .FavoriteModal.active{
     box-shadow: rgba(255, 0, 212, 0.377) 1px 4px 20px 5px;
@@ -72,5 +74,55 @@
     box-shadow: rgba(255, 0, 212, 0.377) 1px 0px 10px 5px;
 }
 .FavoriteMainDiv{
+    padding-top: 1rem;
     min-height: 640px;
+}
+/* CSS */
+.button-28 {
+  appearance: none;
+  background-color: transparent;
+  border: 2px solid #ff00ee57;
+  border-radius: 15px;
+  box-sizing: border-box;
+  color: #fefaf8;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-size: 16px;
+  font-weight: 600;
+  line-height: normal;
+  margin-top: 3rem;
+  min-height: 60px;
+  min-width: 0;
+  outline: none;
+  padding: 16px 24px;
+  text-align: center;
+  width: 40%;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  will-change: transform;
+}
+
+.button-28:disabled {
+  pointer-events: none;
+}
+
+.button-28:hover {
+  color: #fefaf8;
+  background-color: #13020da9;
+  box-shadow: #13020d5d 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+.button-28:active {
+  box-shadow: none;
+  transform: translateY(0);
+}
+.button-28-Div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
