--- a/src/components/Skick/slick.css
+++ b/src/components/Skick/slick.css
@@ -30,26 +30,29 @@
   justify-content: center;
   display: flex;
 }
-.slick-loader{
-  /* width: 100%; */
-  /* height: 100%; */
-  /* display: flex; */
+.slider-skeleton-div {
+  width: 100%;
+  max-width: 500px;
+  display: flex;
+  justify-content: space-between;
 }
-
+.slider-skeleton-div div{
+  width: 167px;
+  height: 250px;
+}
+/* .lds-dual-ring {
+  color: #a13bac7a;
+  margin-top: 2rem;
+}
 .lds-dual-ring,
 .lds-dual-ring:after {
   box-sizing: border-box;
 }
-.lds-dual-ring {
-  display: inline-block;
-  width: 80px;
-  height: 80px;
-}
 .lds-dual-ring:after {
   content: " ";
   display: block;
-  width: 64px;
-  height: 64px;
+  width: 104px;
+  height: 104px;
   margin: 8px;
   border-radius: 50%;
   border: 6.4px solid currentColor;
@@ -63,5 +66,4 @@
   100% {
     transform: rotate(360deg);
   }
-}
-
+} */
